--- a/sir-example.Rmd
+++ b/sir-example.Rmd
@@ -19,7 +19,7 @@ library(deSolve)
 init <- c(S = 1-1e-6, I = 1e-6, R = 0.0)
 
 ## beta: infection parameter; gamma: recovery parameter
-parameters <- c(beta = 2.316, gamma = 0.261)
+parameters <- c(beta = 5.316, gamma = 1.261)
 
 ## Time frame
 times      <- seq(0, 100, by = 0.5)
@@ -62,7 +62,8 @@ approx_long <- approx_df %>%
 ## Plot the output with ggplot:
 ```{r}
 ggplot(data = approx_long, aes(x = time, y = proportion)) +
-  geom_line(aes(color = population))
+  geom_line(aes(color = population)) +
+  scale_color_discrete(labels = c("Infected", "Recovered", "Susceptible"))
 ```
 
 ## End
